# QOsc

./: .gitignore  CMakeLists.txt  QOsc-config.cmake  README.md  include.pri
.github/workflows/: ccpp.yml
include/: QOSC_global.h  QOsc  QOscBundle  QOscInterface  QOscMessage  QOscMethod  QOscValue  include.pri  qosc.h  qosc_global.h  qoscbundle.h  qoschelper.h  qoscinterface.h  qoscmessage.h  qoscmethod.h  qoscpacket.h  qoscvalue.h
include/types/: qoscabstracttype.h  qoscarray.h  qoscblob.h  qoscchar.h  qosccolor.h  qoscfloat32.h  qoscfloat64.h  qoscint32.h  qoscint64.h  qoscliterals.h  qoscmidi.h  qoscstring.cpp  qoscstring.h  qoscsymbol.h  qosctimetag.h  qosctypehelper.h  qosctypes.h  qoscvalue.h
src/: CMakeLists.txt  qosc.cpp  qosc_global.cpp  qoscarray.cpp  qoscbundle.cpp  qoscbundle_p.h  qoschelper.cpp  qoscinterface.cpp  qoscmessage.cpp  qoscmessage_p.h  qoscmethod.cpp  qoscpacket.cpp  qosctypehelper.cpp  qoscvalue.cpp  qoscvalue_p.h  src.pro
tests/: CMakeLists.txt  libs.pri  tests.pro
tests/interface/: CMakeLists.txt  interface.pro  tst_interface.cpp
tests/packets/: CMakeLists.txt  packets.pro  tst_packets.cpp
tests/types/: CMakeLists.txt  tst_types.cpp  types.pro
